--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,19 @@
 .button-4:before {
     display: none;
 }
+
+.parent {
+    border: 1px solid black;
+    margin: 1rem;
+    padding: 2rem 2rem;
+    text-align: center;
+}
+.child {
+    display: inline-block;
+    border: 1px solid red;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+}
+.float-left-child {
+    float: left
+}
