final push (if everything is fine)

--- a/bin/styles.css
+++ b/bin/styles.css
@@ -7,7 +7,7 @@
     --font-size: 30px;
 }
 body{
-    background-image: url('html_ressources/background');
+    background-image: url('../html_ressources/background');
     background-size: cover;
 }
 
